# autohotkey-mcp

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  INSTALL.md  README.md  glama.json  glama_20260424_211223.json.bak  justfile  llms-full.txt  llms.txt  ontology.json  pyproject.toml  pyproject.toml.bak  start.ps1
.cursor/skills/autohotkey-v2-authoring/: SKILL.md
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  HOW_HELP_IS_IMPLEMENTED.md  MINI_HELP_PATTERN.md  PRD.md
src/autohotkey_mcp/: __init__.py  ahk_llm.py  dual_llm_20260417_041654.py.bak  help_content.py  personas.py  prompt_catalog.py  prompt_refine.py  prompt_resources.py  prompts.py  providers.py  providers_20260417_043116.py.bak  providers_20260417_105236.py.bak  scriptlet_generate.py  server.py  server_20260417_041726.py.bak  server_20260424_210519.py.bak  server_20260425_004948.py.bak  server_20260425_004951.py.bak  server_20260425_004956.py.bak
src/autohotkey_mcp/tools/: __init__.py  prefab.py  prefab_20260424_202512.py.bak  prefab_20260424_202530.py.bak  scriptlets.py
tests/: README.md  conftest.py  test_ahk_generation.py  test_help_content.py  test_server.py
web_sota/: README.md  biome.json  index.html  package-lock.json  package.json  start.ps1  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
web_sota/src/: App.tsx  App_20260424_210652.tsx.bak  App_20260425_005202.tsx.bak  App_20260425_005205.tsx.bak
web_sota/src/pages/: chat.tsx  chat_20260425_005153.tsx.bak  dashboard.tsx  dashboard_20260424_210734.tsx.bak  detail.tsx  help.tsx  running.tsx  settings.tsx  (+3 more)
(+6 files in other folders)
