[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autohotkey-mcp"
version = "0.1.0"
description = "MCP server for AutoHotkey scriptlets: list, run, stop, get source/metadata; optional AI script generation (sandbox). Uses ScriptletCOMBridge and autohotkey-test repo as depot."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=3.1",
    "fastapi>=0.95",
    "uvicorn>=0.21",
    "httpx>=0.24",
]

[project.optional-dependencies]
dev = ["pytest>=7", "pytest-asyncio>=0.21"]

[project.scripts]
autohotkey-mcp = "autohotkey_mcp.server:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v"

[tool.ruff]
line-length = 100
target-version = "py312"
